--- a/src/global.scss
+++ b/src/global.scss
@@ -13,7 +13,7 @@
         margin-bottom: 3px;
         padding: 5px;
         i{
-            letter-spacing: 2px;
+            margin-right: 5px;
         }
     }
 }
