地圖/任務UI優化

--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,7 @@
         text-align: left;
         font-weight: bold;
         font-size: 18px;
+        color:rgb(13, 110, 253);
         border-bottom: 1px solid rgb(202, 202, 202);
         margin-bottom: 3px;
         padding: 5px;
