--- a/src/global.scss
+++ b/src/global.scss
@@ -8,7 +8,7 @@
     .title{
         text-align: left;
         font-weight: bold;
-        font-size: 15px;
+        font-size: 14px;
         color:rgb(13, 110, 253);
         border-bottom: 1px solid rgb(202, 202, 202);
         margin-bottom: 1px;
@@ -19,5 +19,22 @@
     }
 }
 
-
+.custom-tabs-head{
+    .nav-item {
+        button {
+          font-size: 14px;
+          font-weight: bold;
+        }
+        .nav-link {
+          color: rgb(90, 90, 90);
+        }
+        .nav-link.active {
+          color: rgb(13, 110, 253);
+        }
+      }
+}
+.copy-icon {
+  cursor: pointer;
+  margin-inline: 5px;
+}
 
