--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,6 @@
+.el-table{
+  z-index: 1;
+}
 .card-like{
     border: 1px solid #dadada;
     border-radius: 10px;
@@ -8,7 +11,7 @@
     .title{
         text-align: left;
         font-weight: bold;
-        font-size: 14px;
+        font-size: 16px;
         color:rgb(13, 110, 253);
         border-bottom: 1px solid rgb(202, 202, 202);
         margin-bottom: 1px;
@@ -19,10 +22,10 @@
     }
 }
 
-.custom-tabs-head{
+.custom-tabs-head ,.custom-tabs-head-large{
     .nav-item {
         button {
-          font-size: 14px;
+          font-size: 16px;
           font-weight: bold;
         }
         .nav-link {
@@ -33,8 +36,14 @@
         }
       }
 }
+.custom-tabs-head-large{
+  .nav-item {
+    button {
+      font-size: 20px;
+    }
+  }
+}
 .copy-icon {
   cursor: pointer;
   margin-inline: 5px;
 }
-
