--- a/src/global.scss
+++ b/src/global.scss
@@ -79,3 +79,10 @@
 .el-tabs__header{
   margin:0;
 }
+
+.el-upload {
+  width: 64px;
+  /* 设置宽度为100px，您可以根据需要进行调整 */
+  height: 64px;
+  /* 设置高度为100px，您可以根据需要进行调整 */
+}
