把地圖的zoom in/out button 位置修好了/ 側邊選單修改(地圖與顯示群組)

--- a/src/global.scss
+++ b/src/global.scss
@@ -95,3 +95,24 @@
     height: 100%;
   }
 }
+
+.ol-zoom{
+  // background-color: black;
+  width: 40px;
+  position: absolute;
+  display:  flex;
+  flex-direction: column;
+  z-index: -1;
+  button{
+    font-size: 26px;
+    width: 35px;
+    border-radius: 3px;
+    margin:2px;
+    border: 1px solid grey;
+    background-color: white;
+  }
+}
+
+.ol-rotate{
+  visibility: hidden;
+}
