新增車輛管理頁面/debug

--- a/src/global.scss
+++ b/src/global.scss
@@ -127,3 +127,26 @@
 .ol-rotate{
   visibility: hidden;
 }
+
+
+.my-nav {
+  width: 160px;
+  margin-left: 16px;
+  padding: 5px;
+}
+.my-nav-tabs {
+  // background: pink;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgb(170, 170, 170);
+  height: 100vh;
+
+}
+
+
+.my-el-table-row-class{
+}
+.my-el-table-cell-class{
+  color:black;
+  background-color: rgb(13, 110, 253);
+}
