重設計Map右鍵選單/修復瀏覽器回到派車頁面時會有資料錯誤的BUG/remove console logs/地圖編輯模式預設使用Slam mode

--- a/src/global.scss
+++ b/src/global.scss
@@ -197,3 +197,22 @@
     width: 100% !important;
   }
 }
+
+.map-right-click-menu{
+  width: 100%;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+
+  button{
+    color:black;
+    width: 180px;
+    margin-block:1px;
+    border-radius: 4px;
+    border: 1px solid rgb(87, 87, 87);
+  }
+  button:hover{
+    background-color: rgb(13, 110, 253);
+    color:white;
+  }
+}
