優化地圖與修復錯誤

--- a/src/global.scss
+++ b/src/global.scss
@@ -115,6 +115,7 @@
     margin:2px;
     border: 1px solid grey;
     background-color: white;
+    color:black;
     font-weight: bolder;
   }
   button:hover{
