--- a/src/global.scss
+++ b/src/global.scss
@@ -183,6 +183,10 @@
     font-size: 44px;
   }
 }
+
+.dispatch-fail-swal{
+  width: 45rem !important;
+}
 .swal2-title{
   font-size: 36px !important;
 }
