feature : 充電按鈕類別動態調整(TODO determine class via state) / 充電按鈕新增 popup 顯示一般充電、深度充電、解除深度充電等按鈕

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,7 @@
+:root {
+  --charge-button-normal-color: green;
+  --charge-button-deep-charge-raising-color: orange;
+}
 @font-face {
   font-family: 'DigitalFont';
   src: url('@/assets/fonts/DS-DIGIT.TTF');
