style : 地圖上儲格有貨顯示顏色使用 root.map-rack-port-cargo-exist-color / 地圖顯示儲格無貨物顏色改為  rgba(161, 161, 161, 0.3)

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,7 @@
 :root {
   --charge-button-normal-color: green;
   --charge-button-deep-charge-raising-color: orange;
+  --map-rack-port-cargo-exist-color: rgb(0, 255, 64);
 }
 @font-face {
   font-family: 'DigitalFont';
