--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,8 @@
   --charge-button-normal-color: green;
   --charge-button-deep-charge-raising-color: orange;
   --map-rack-port-cargo-exist-color: rgb(0, 255, 64);
+  --map-rack-port-display-width: 18px;
+  --map-rack-port-display-height: 18px;
 }
 @font-face {
   font-family: 'DigitalFont';
