地圖上的 rack儲格新增有帳無料的顯示/當訪客權限下的header功能顯示控制

--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,7 @@
   --charge-button-normal-color: green;
   --charge-button-deep-charge-raising-color: orange;
   --map-rack-port-cargo-exist-color: rgb(0, 255, 64);
+  --map-rack-port-no-cargo-but-id-exist-color: rgb(230, 162, 60);
   --map-rack-port-display-width: 20px;
   --map-rack-port-display-height: 20px;
 }
